--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -1,20 +1,20 @@
 {
   "site": {
-    "title": "かなたんボタン",
-    "description": "新生かなたんボタンサイトへようこそ！かなたんの総合ファンページを目指しますー",
+    "title": "ひつじちゃんボタン",
+    "description": "ひつじちゃんボタンサイトへようこそ！かなたんの総合ファンページを目指しますー",
     "index": "ホームページ",
     "links": "友情リンク",
     "about": "について",
     "switch_dark_mode": "ナイトモードスイッチ",
     "switch_language": "言語を切り替える",
     "footer": {
-      "lonely_ion": "天音彼方陶芸工場",
-      "oruyanke": "おるやんけ組",
+      "author": "茶目C'era",
+      "contributor": "小岩井かな",
       "content": "このサイトはファン作品であり、公式とは関係ありません。STAFFリストとプロジェクト参加方式は「について」ページをご覧ください。"
     }
   },
   "live": {
-    "activity": "ライブ ストリーム",
+    "activity": "ライブ配信",
     "schedule": "予定",
     "on_air": "ライブ配信中",
     "loading": "生放送で取得中···",
@@ -30,12 +30,12 @@
     "overlap": "音声を重ねる",
     "random": "自動ランダム再生",
     "repeat": "ループ",
-    "full_name": "天音かなた",
-    "overlap_title": "重なるかなたん音声"
+    "full_name": "ひつじちゃん",
+    "overlap_title": "重なるひつじの声"
   },
   "dev": {
     "title": "開発モードのWebサイトにアクセスしています",
-    "desc": "開発モードでは、かなたんボタンのベータ版に脆弱性、エラー、またはその他の問題が含まれる場合があります。 私たちはサポートを提供しておらず、問題または誤動作に対する明示的または黙示的な保証または補償を提供していません。实际新功能以正式版上线为准。",
+    "desc": "開発モードでは、かなたんボタンのベータ版に脆弱性、エラー、またはその他の問題が含まれる場合があります。 私たちはサポートを提供しておらず、問題または誤動作に対する明示的または黙示的な保証または補償を提供していません。",
     "to_stable": "公式ページへ"
   }
 }
