--- a/assets/locales/zh.json
+++ b/assets/locales/zh.json
@@ -1,16 +1,16 @@
 {
   "site": {
-    "title": "么耶咩按钮",
-    "description": "新生彼方碳按钮，绝赞持续建设中~",
+    "title": "咩咩按钮站",
+    "description": "咩咩语音按钮站兼粉丝站，持续建设中~",
     "index": "主页",
     "links": "友情链接",
     "about": "关于",
     "switch_dark_mode": "夜间模式开关",
     "switch_language": "切换语言",
     "footer": {
-      "lonely_ion": "茶目",
-      "oruyanke": "小岩井Kana",
-      "content": "本站为爱好者作品，和Hololive官方没有关联，STAFF名单以及项目参与方式请查看\"关于\"页面"
+      "author": "茶目",
+      "contributor": "小岩井Kana",
+      "content": "本站为爱好者作品，和官方频道没有直接关联，STAFF名单以及项目参与方式请查看\"关于\"页面"
     }
   },
   "live": {
@@ -18,7 +18,7 @@
     "schedule": "计划",
     "on_air": "正在直播",
     "loading": "直播动态获取中...",
-    "no_schedule": "还没有发现正在或计划中的直播",
+    "no_schedule": "还咩有发现正在或计划中的直播",
     "notification": "持续建设中~"
   },
   "control": {
@@ -30,8 +30,8 @@
     "overlap": "重叠播放",
     "random": "随机播放",
     "repeat": "洗脑循环",
-    "full_name": "天音彼方",
-    "overlap_title": "多重狐狸"
+    "full_name": "么耶咩咩咩",
+    "overlap_title": "多重羊叫"
   },
   "dev": {
     "title": "您正在访问开发模式的站点",
