feat: 🎸 Update readme

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -1,7 +1,7 @@
 {
   "site": {
-    "title": "ひつじちゃんボタン",
-    "description": "ひつじちゃんボタンサイトへようこそ！かなたんの総合ファンページを目指しますー",
+    "title": "么耶咩咩咩ボタン",
+    "description": "么耶咩咩咩ボタンサイトへようこそ！かなたんの総合ファンページを目指しますー",
     "index": "ホームページ",
     "links": "友情リンク",
     "about": "について",
@@ -30,7 +30,7 @@
     "overlap": "音声を重ねる",
     "random": "自動ランダム再生",
     "repeat": "ループ",
-    "full_name": "ひつじちゃん",
+    "full_name": "么耶咩咩咩",
     "overlap_title": "重なるひつじの声"
   },
   "dev": {
